--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 #vendor/
 #node_modules/
 
-# Laravel 4 specific
+# Exclusiones de directorio
 /class/conexion.class.php.txt
+/tools/xajax
 /tools/xajax_0.5_standard
 /tools/xajax_0.5_standard.zip
+/theme
 #app/storage/
 
 # Laravel 5 & Lumen specific
